generated_source/usbmParser.cpp

// Generated from usbm.g4 by ANTLR 4.7.1


#include "usbmListener.h"

#include "usbmParser.h"


using namespace antlrcpp;
using namespace antlr4;

usbmParser::usbmParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

usbmParser::~usbmParser() {
  delete _interpreter;
}

std::string usbmParser::getGrammarFileName() const {
  return "usbm.g4";
}

const std::vector<std::string>& usbmParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& usbmParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

usbmParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

usbmParser::ToolkitContext* usbmParser::FileContext::toolkit() {
  return getRuleContext<usbmParser::ToolkitContext>(0);
}

usbmParser::LocationContext* usbmParser::FileContext::location() {
  return getRuleContext<usbmParser::LocationContext>(0);
}

std::vector<usbmParser::KeywordContext *> usbmParser::FileContext::keyword() {
  return getRuleContexts<usbmParser::KeywordContext>();
}

usbmParser::KeywordContext* usbmParser::FileContext::keyword(size_t i) {
  return getRuleContext<usbmParser::KeywordContext>(i);
}


size_t usbmParser::FileContext::getRuleIndex() const {
  return usbmParser::RuleFile;
}

void usbmParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void usbmParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

usbmParser::FileContext* usbmParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, usbmParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    toolkit();
    setState(37);
    location();
    setState(39); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(38);
      keyword();
      setState(41); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == usbmParser::KW

    || _la == usbmParser::KEYWORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ToolkitContext ------------------------------------------------------------------

usbmParser::ToolkitContext::ToolkitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::ToolkitContext::TOOLKIT() {
  return getToken(usbmParser::TOOLKIT, 0);
}

usbmParser::StringContext* usbmParser::ToolkitContext::string() {
  return getRuleContext<usbmParser::StringContext>(0);
}


size_t usbmParser::ToolkitContext::getRuleIndex() const {
  return usbmParser::RuleToolkit;
}

void usbmParser::ToolkitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterToolkit(this);
}

void usbmParser::ToolkitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitToolkit(this);
}

usbmParser::ToolkitContext* usbmParser::toolkit() {
  ToolkitContext *_localctx = _tracker.createInstance<ToolkitContext>(_ctx, getState());
  enterRule(_localctx, 2, usbmParser::RuleToolkit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    match(usbmParser::TOOLKIT);
    setState(44);
    string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocationContext ------------------------------------------------------------------

usbmParser::LocationContext::LocationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::LocationContext::LOCATION() {
  return getToken(usbmParser::LOCATION, 0);
}

usbmParser::StringContext* usbmParser::LocationContext::string() {
  return getRuleContext<usbmParser::StringContext>(0);
}


size_t usbmParser::LocationContext::getRuleIndex() const {
  return usbmParser::RuleLocation;
}

void usbmParser::LocationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocation(this);
}

void usbmParser::LocationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocation(this);
}

usbmParser::LocationContext* usbmParser::location() {
  LocationContext *_localctx = _tracker.createInstance<LocationContext>(_ctx, getState());
  enterRule(_localctx, 4, usbmParser::RuleLocation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(usbmParser::LOCATION);
    setState(47);
    string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KeywordContext ------------------------------------------------------------------

usbmParser::KeywordContext::KeywordContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

usbmParser::TitleContext* usbmParser::KeywordContext::title() {
  return getRuleContext<usbmParser::TitleContext>(0);
}

usbmParser::DescriptionContext* usbmParser::KeywordContext::description() {
  return getRuleContext<usbmParser::DescriptionContext>(0);
}

std::vector<usbmParser::SyntaxContext *> usbmParser::KeywordContext::syntax() {
  return getRuleContexts<usbmParser::SyntaxContext>();
}

usbmParser::SyntaxContext* usbmParser::KeywordContext::syntax(size_t i) {
  return getRuleContext<usbmParser::SyntaxContext>(i);
}

std::vector<usbmParser::ExampleContext *> usbmParser::KeywordContext::example() {
  return getRuleContexts<usbmParser::ExampleContext>();
}

usbmParser::ExampleContext* usbmParser::KeywordContext::example(size_t i) {
  return getRuleContext<usbmParser::ExampleContext>(i);
}

std::vector<usbmParser::Kw_notesContext *> usbmParser::KeywordContext::kw_notes() {
  return getRuleContexts<usbmParser::Kw_notesContext>();
}

usbmParser::Kw_notesContext* usbmParser::KeywordContext::kw_notes(size_t i) {
  return getRuleContext<usbmParser::Kw_notesContext>(i);
}

std::vector<usbmParser::XrefContext *> usbmParser::KeywordContext::xref() {
  return getRuleContexts<usbmParser::XrefContext>();
}

usbmParser::XrefContext* usbmParser::KeywordContext::xref(size_t i) {
  return getRuleContext<usbmParser::XrefContext>(i);
}


size_t usbmParser::KeywordContext::getRuleIndex() const {
  return usbmParser::RuleKeyword;
}

void usbmParser::KeywordContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKeyword(this);
}

void usbmParser::KeywordContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKeyword(this);
}

usbmParser::KeywordContext* usbmParser::keyword() {
  KeywordContext *_localctx = _tracker.createInstance<KeywordContext>(_ctx, getState());
  enterRule(_localctx, 6, usbmParser::RuleKeyword);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    title();
    setState(51); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(50);
      syntax();
      setState(53); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == usbmParser::SYNTAX);
    setState(55);
    description();
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == usbmParser::EXAMPLE) {
      setState(56);
      example();
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == usbmParser::NOTE

    || _la == usbmParser::NOTES) {
      setState(62);
      kw_notes();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == usbmParser::XREF) {
      setState(68);
      xref();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TitleContext ------------------------------------------------------------------

usbmParser::TitleContext::TitleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

usbmParser::Title_idContext* usbmParser::TitleContext::title_id() {
  return getRuleContext<usbmParser::Title_idContext>(0);
}

tree::TerminalNode* usbmParser::TitleContext::KW() {
  return getToken(usbmParser::KW, 0);
}

tree::TerminalNode* usbmParser::TitleContext::KEYWORD() {
  return getToken(usbmParser::KEYWORD, 0);
}


size_t usbmParser::TitleContext::getRuleIndex() const {
  return usbmParser::RuleTitle;
}

void usbmParser::TitleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTitle(this);
}

void usbmParser::TitleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTitle(this);
}

usbmParser::TitleContext* usbmParser::title() {
  TitleContext *_localctx = _tracker.createInstance<TitleContext>(_ctx, getState());
  enterRule(_localctx, 8, usbmParser::RuleTitle);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _la = _input->LA(1);
    if (!(_la == usbmParser::KW

    || _la == usbmParser::KEYWORD)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(75);
    title_id();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Title_idContext ------------------------------------------------------------------

usbmParser::Title_idContext::Title_idContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::Title_idContext::TITLE_ID() {
  return getToken(usbmParser::TITLE_ID, 0);
}


size_t usbmParser::Title_idContext::getRuleIndex() const {
  return usbmParser::RuleTitle_id;
}

void usbmParser::Title_idContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTitle_id(this);
}

void usbmParser::Title_idContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTitle_id(this);
}

usbmParser::Title_idContext* usbmParser::title_id() {
  Title_idContext *_localctx = _tracker.createInstance<Title_idContext>(_ctx, getState());
  enterRule(_localctx, 10, usbmParser::RuleTitle_id);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(usbmParser::TITLE_ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SyntaxContext ------------------------------------------------------------------

usbmParser::SyntaxContext::SyntaxContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::SyntaxContext::SYNTAX() {
  return getToken(usbmParser::SYNTAX, 0);
}

usbmParser::StringContext* usbmParser::SyntaxContext::string() {
  return getRuleContext<usbmParser::StringContext>(0);
}


size_t usbmParser::SyntaxContext::getRuleIndex() const {
  return usbmParser::RuleSyntax;
}

void usbmParser::SyntaxContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSyntax(this);
}

void usbmParser::SyntaxContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSyntax(this);
}

usbmParser::SyntaxContext* usbmParser::syntax() {
  SyntaxContext *_localctx = _tracker.createInstance<SyntaxContext>(_ctx, getState());
  enterRule(_localctx, 12, usbmParser::RuleSyntax);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(usbmParser::SYNTAX);
    setState(80);
    string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionContext ------------------------------------------------------------------

usbmParser::DescriptionContext::DescriptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::DescriptionContext::DESCRIPTION() {
  return getToken(usbmParser::DESCRIPTION, 0);
}

std::vector<usbmParser::TextContext *> usbmParser::DescriptionContext::text() {
  return getRuleContexts<usbmParser::TextContext>();
}

usbmParser::TextContext* usbmParser::DescriptionContext::text(size_t i) {
  return getRuleContext<usbmParser::TextContext>(i);
}


size_t usbmParser::DescriptionContext::getRuleIndex() const {
  return usbmParser::RuleDescription;
}

void usbmParser::DescriptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDescription(this);
}

void usbmParser::DescriptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDescription(this);
}

usbmParser::DescriptionContext* usbmParser::description() {
  DescriptionContext *_localctx = _tracker.createInstance<DescriptionContext>(_ctx, getState());
  enterRule(_localctx, 14, usbmParser::RuleDescription);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(usbmParser::DESCRIPTION);
    setState(84); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(83);
      text();
      setState(86); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == usbmParser::TEXT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExampleContext ------------------------------------------------------------------

usbmParser::ExampleContext::ExampleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::ExampleContext::EXAMPLE() {
  return getToken(usbmParser::EXAMPLE, 0);
}

std::vector<usbmParser::TextContext *> usbmParser::ExampleContext::text() {
  return getRuleContexts<usbmParser::TextContext>();
}

usbmParser::TextContext* usbmParser::ExampleContext::text(size_t i) {
  return getRuleContext<usbmParser::TextContext>(i);
}

std::vector<usbmParser::ListingContext *> usbmParser::ExampleContext::listing() {
  return getRuleContexts<usbmParser::ListingContext>();
}

usbmParser::ListingContext* usbmParser::ExampleContext::listing(size_t i) {
  return getRuleContext<usbmParser::ListingContext>(i);
}


size_t usbmParser::ExampleContext::getRuleIndex() const {
  return usbmParser::RuleExample;
}

void usbmParser::ExampleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExample(this);
}

void usbmParser::ExampleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExample(this);
}

usbmParser::ExampleContext* usbmParser::example() {
  ExampleContext *_localctx = _tracker.createInstance<ExampleContext>(_ctx, getState());
  enterRule(_localctx, 16, usbmParser::RuleExample);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(usbmParser::EXAMPLE);
    setState(91); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(91);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case usbmParser::TEXT: {
          setState(89);
          text();
          break;
        }

        case usbmParser::CODE: {
          setState(90);
          listing();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(93); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == usbmParser::CODE

    || _la == usbmParser::TEXT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Kw_notesContext ------------------------------------------------------------------

usbmParser::Kw_notesContext::Kw_notesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

usbmParser::NoteContext* usbmParser::Kw_notesContext::note() {
  return getRuleContext<usbmParser::NoteContext>(0);
}

usbmParser::NotesContext* usbmParser::Kw_notesContext::notes() {
  return getRuleContext<usbmParser::NotesContext>(0);
}


size_t usbmParser::Kw_notesContext::getRuleIndex() const {
  return usbmParser::RuleKw_notes;
}

void usbmParser::Kw_notesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKw_notes(this);
}

void usbmParser::Kw_notesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKw_notes(this);
}

usbmParser::Kw_notesContext* usbmParser::kw_notes() {
  Kw_notesContext *_localctx = _tracker.createInstance<Kw_notesContext>(_ctx, getState());
  enterRule(_localctx, 18, usbmParser::RuleKw_notes);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case usbmParser::NOTE: {
        enterOuterAlt(_localctx, 1);
        setState(95);
        note();
        break;
      }

      case usbmParser::NOTES: {
        enterOuterAlt(_localctx, 2);
        setState(96);
        notes();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NoteContext ------------------------------------------------------------------

usbmParser::NoteContext::NoteContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::NoteContext::NOTE() {
  return getToken(usbmParser::NOTE, 0);
}

std::vector<usbmParser::NotelistContext *> usbmParser::NoteContext::notelist() {
  return getRuleContexts<usbmParser::NotelistContext>();
}

usbmParser::NotelistContext* usbmParser::NoteContext::notelist(size_t i) {
  return getRuleContext<usbmParser::NotelistContext>(i);
}


size_t usbmParser::NoteContext::getRuleIndex() const {
  return usbmParser::RuleNote;
}

void usbmParser::NoteContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNote(this);
}

void usbmParser::NoteContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNote(this);
}

usbmParser::NoteContext* usbmParser::note() {
  NoteContext *_localctx = _tracker.createInstance<NoteContext>(_ctx, getState());
  enterRule(_localctx, 20, usbmParser::RuleNote);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(usbmParser::NOTE);
    setState(101); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(100);
      notelist();
      setState(103); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == usbmParser::CODE

    || _la == usbmParser::TEXT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NotesContext ------------------------------------------------------------------

usbmParser::NotesContext::NotesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* usbmParser::NotesContext::NOTES() {
  return getToken(usbmParser::NOTES, 0);
}

std::vector<usbmParser::NoteheaderContext *> usbmParser::NotesContext::noteheader() {
  return getRuleContexts<usbmParser::NoteheaderContext>();
}

usbmParser::NoteheaderContext* usbmParser::NotesContext::noteheader(size_t i) {
  return getRuleContext<usbmParser::NoteheaderContext>(i);
}

std::vector<usbmParser::NotelistContext *> usbmParser::NotesContext::notelist() {
  return getRuleContexts<usbmParser::NotelistContext>();
}

usbmParser::NotelistContext* usbmParser::NotesContext::notelist(size_t i) {
  return getRuleContext<usbmParser::NotelistContext>(i);
}


size_t usbmParser::NotesContext::getRuleIndex() const {
  return usbmParser::RuleNotes;
}

void usbmParser::NotesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNotes(this);
}

void usbmParser::NotesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<usbmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNotes(this);
}

usbmParser::NotesContext* usbmParser::notes() {
  NotesContext *_localctx = _tracker.createInstance<NotesContext>(_ctx, getState());
  enterRule(_localctx, 22, usbmParser::RuleNotes);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(usbmParser::NOTES);
    setState(112); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(106);
      noteheader();
      setState(108); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(107);
        notelist();
        setState(110); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == usbmParser::CODE

      || _la == usbmParser::TEXT);
      setState(114); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == usbmParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NoteheaderContext ------------------------------------------------------------------
